# app-boa-api

./: .envrc  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  rerun.sh
_external/nnunet/inference/: predict.py
_external/totalsegmentator/: nnunet.py
scripts/: generate_version.sh
src/boa_ai/: __init__.py  api.py  s3.py  security.py
src/boa_ai/worker/: body-parts-meta.json  exceptions.py  tasks.py  total-meta.json
